<?xml version="1.0"?>
<package>

	<name>tway</name>
	<version>0.1.0</version>
	<description>KaCanOpen: An Open Plug&amp;Play CANopen Stack for ROS in Modern C++</description>
	<maintainer email="thomas.keh@student.kit.edu">Thomas Keh</maintainer>
	<author email="thomas.keh@student.kit.edu">Thomas Keh</author>
	<license>BSD</license>
	<url type="website">https://github.com/KITmedical/kacanopen</url>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>  
	<build_depend>geometry_msgs</build_depend>
	<build_depend>tway_msgs</build_depend>
	<build_depend>rtt_ros</build_depend> 

	<run_depend>roscpp</run_depend>
	<run_depend>tway_msgs</run_depend>
	<run_depend>robot_state_publisher</run_depend>
	<run_depend>message_runtime</run_depend>
	<run_depend>rtt</run_depend> 
	<run_depend>rtt_ros</run_depend> 
	<run_depend>rtt_rosnode</run_depend> 
	<run_depend>rtt_roscomm</run_depend> 
	<run_depend>rtt_rosparam</run_depend> 
	<run_depend>rtt_std_msgs</run_depend> 
	<run_depend>rtt_std_srvs</run_depend> 
	<!-- <build_depend>message_generation</build_depend> -->

</package>
